tests/ui/no_pin_data_but_pinned_drop.stderr
error[E0277]: the trait bound `Foo: HasPinData` is not satisfied
    --> $DIR/no_pin_data_but_pinned_drop.rs:9:21
     |
9    | impl PinnedDrop for Foo {
     |                     ^^^ the trait `HasPinData` is not implemented for `Foo`
     |
note: required by a bound in `PinnedDrop`
    --> $SRC_DIR/src/lib.rs:1383:30
     |
1383 | pub unsafe trait PinnedDrop: __internal::HasPinData {
     |                              ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PinnedDrop`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
